--- a/assets/_layouts/site.html
+++ b/assets/_layouts/site.html
@@ -7,7 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Cormorant+Garamond:ital,wght@0,400;0,500;0,700;1,400&family=Poiret+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
+  <!-- Use the path you actually have: /css/styles.css -->
+  <link rel="stylesheet" href="{{ '/css/styles.css' | relative_url }}" />
   {% seo %}
 </head>
 <body>
@@ -42,6 +43,6 @@
       </div>
     </div>
   </footer>
-  <script src="{{ '/assets/js/main.js' | relative_url }}" defer></script>
+  <script src="{{ '/js/main.js' | relative_url }}" defer></script>
 </body>
 </html>
