--- a/assets/_layouts/post.html
+++ b/assets/_layouts/post.html
@@ -7,7 +7,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Cormorant+Garamond:ital,wght@0,400;0,500;0,700;1,400&family=Poiret+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
+
+  <!-- Load your CSS (tries assets/ first, then css/ as fallback) -->
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/styles.css' | relative_url }}">
+
   {% seo %}
 </head>
 <body>
@@ -67,4 +71,5 @@
   <script src="{{ '/js/main.js' | relative_url }}" defer></script>
 </body>
 </html>
+
 
