--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,19 @@ layout: null
       <div class="brand-left" aria-hidden="true"></div>
       <a class="skip" href="#main">Skip to content</a>
       <nav class="menu" aria-label="Primary">
-        <a href="{{ '/'        | relative_url }}" class="menu-link">Home</a>
-        <a href="{{ '/about/'  | relative_url }}" class="menu-link">About</a>
-        <a href="{{ '/posts/'  | relative_url }}" class="menu-link">Posts</a>
-        <a href="{{ '/gallery/'| relative_url }}" class="menu-link">Gallery</a>
-      </nav>
-      <h1 class="site-title">Old Man Yells at HEMA</h1>
+  <a href="{{ '/posts/'   | relative_url }}" class="menu-link">Posts</a>
+
+  <div class="dropdown">
+    <a href="{{ '/resources/' | relative_url }}" class="menu-link dropdown-toggle">Library ▾</a>
+    <div class="dropdown-menu" role="menu" aria-label="Library">
+      <a class="dropdown-item" href="{{ '/resources/about/'   | relative_url }}">About</a>
+      <a class="dropdown-item" href="{{ '/resources/recipes/' | relative_url }}">Recipes</a>
+      <a class="dropdown-item" href="{{ '/gallery/'           | relative_url }}">Gallery</a>
+      <a class="dropdown-item" href="{{ '/resources/list/'    | relative_url }}">Resources</a>
     </div>
+  </div>
+</nav>
+
   </header>
 
   <main id="main" class="wrap">
