--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@ layout: null
     <a class="skip" href="#main">Skip to content</a>
 
     <nav class="menu" aria-label="Primary">
+      <a href="{{ '/' | relative_url }}" class="menu-link">Home</a>
       <a href="{{ '/posts/'   | relative_url }}" class="menu-link">Posts</a>
       <div class="dropdown">
         <a href="{{ '/resources/' | relative_url }}" class="menu-link dropdown-toggle">Library ▾</a>
