--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@ layout: null
           <a class="dropdown-item" href="{{ '/gallery/'           | relative_url }}">Gallery</a>
           <a class="dropdown-item" href="{{ '/resources/list/'    | relative_url }}">Resources</a>
         </div>
+             <h1 class="site-title">{{ site.title }}</h1>
       </div>
     </nav>
   </div> <!-- ✅ close .wrap -->
