--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@ layout: null
           <a class="dropdown-item" href="{{ '/resources/recipes/' | relative_url }}">Recipes</a>
           <a class="dropdown-item" href="{{ '/gallery/'           | relative_url }}">Gallery</a>
           <a class="dropdown-item" href="{{ '/resources/list/'    | relative_url }}">Resources</a>
-        </div>
-             <h1 class="site-title">{{ site.title }}</h1>
-      </div>
-    </nav>
+          </nav>
+      <h1 class="site-title">Old Man Yells at HEMA</h1>
+    </div>
+  </header>
   </div> <!-- ✅ close .wrap -->
 </header>
 
