--- a/_layouts/library_index.html
+++ b/_layouts/library_index.html
@@ -1,11 +1,8 @@
 
 ---
-layout: library_index
-title: Library
-permalink: /library/
+layout: default
 ---
 
----
 
 <section class="deco-card">
   <h1>{{ page.title }}</h1>
