--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,10 +48,10 @@ layout: null
           <a href="{{ '/library/' | relative_url }}" class="menu-link dropdown-toggle" aria-haspopup="true" aria-expanded="false">Library ▾</a>
           <div class="dropdown-menu" role="menu" aria-label="Library">
             <!-- If you use a Library hub at /library/, keep this first link. -->
-            <a class="dropdown-item" href="{{ '/library/' | relative_url }}">Library Hub</a>
+            <a class="dropdown-item" href="{{ '/library/' | relative_url }}">Library</a>
             <!-- If/when you add section pages, point these to those URLs -->
-            <a class="dropdown-item" href="{{ '/library/tournaments/' | relative_url }}">Tournaments</a>
-            <a class="dropdown-item" href="{{ '/library/training/'   | relative_url }}">Training</a>
+            <a class="dropdown-item" href="{{ '/library/tournaments/' | relative_url }}">Recipes</a>
+            <a class="dropdown-item" href="{{ '/library/training/'   | relative_url }}">Gallery</a>
             <a class="dropdown-item" href="{{ '/library/essays/'     | relative_url }}">Essays</a>
             <a class="dropdown-item" href="{{ '/library/resources/'  | relative_url }}">Resources</a>
           </div>
