--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,8 @@ layout: null
             <!-- If you use a Library hub at /library/, keep this first link. -->
             <a class="dropdown-item" href="{{ '/library/' | relative_url }}">Library</a>
             <!-- If/when you add section pages, point these to those URLs -->
-            <a class="dropdown-item" href="{{ '/library/tournaments/' | relative_url }}">Recipes</a>
-            <a class="dropdown-item" href="{{ '/library/training/'   | relative_url }}">Gallery</a>
+            <a class="dropdown-item" href="{{ '/library/recipes/' | relative_url }}">Recipes</a>
+            <a class="dropdown-item" href="{{ '/library/gallery/'   | relative_url }}">Gallery</a>
             <a class="dropdown-item" href="{{ '/library/essays/'     | relative_url }}">Essays</a>
             <a class="dropdown-item" href="{{ '/library/resources/'  | relative_url }}">Resources</a>
           </div>
