--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@ layout: null
         <div class="foot-right">
           <a class="foot-link" href="mailto:hello@example.com">RSVP</a>
           <span aria-hidden>·</span>
-          <a class="foot-link" href="{{ '/about/' | relative_url }}">Imprint</a>
+          <a class="foot-link" href="{{ '/about/' | relative_url }}">oldmanyellsathema@gmail.com</a>
         </div>
       </div>
     </div>
